--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -41,6 +41,8 @@ jobs:
         with:
           name: java-app
           path: build/libs/*.jar
+      - name: List build/libs directory
+        run: ls -al build/libs/
 
 #  test:
 #    name: Test
@@ -87,6 +89,8 @@ jobs:
         uses: actions/checkout@v4
       - name: check directory
         run: ls -al
+      - name: List build/libs directory
+        run: ls -al build/libs/
       - name: Download Artifact
         uses: actions/download-artifact@v4
         with:
