--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -84,6 +84,7 @@ jobs:
   publish:
     name: Publish Docker Image
     runs-on: ubuntu-latest
+    needs: build
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
