--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -90,8 +90,8 @@ jobs:
         uses: actions/checkout@v4
       - name: check directory
         run: ls -al
-      - name: List build/libs directory
-        run: ls -al build/libs/
+#      - name: List build/libs directory
+#        run: ls -al build/libs/
       - name: Download Artifact
         uses: actions/download-artifact@v4
         with:
