--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 spring.application.name=WebsiteC03
-server.port=8080
+server.port=8081
 
-spring.datasource.url=jdbc:postgresql://34.27.28.48:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+
+spring.datasource.url=${JDBC_DATABASE_URL}
+spring.datasource.username=${JDBC_DATABASE_USERNAME}
+spring.datasource.password=${JDBC_DATABASE_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.show-sql=true
